# msd-login-service

./: Cargo.toml  Dockerfile  Dockerfile.dev  README.md  start_server.sh
migrations/2022-12-02-063900_create_users/: up.sql
src/: cors.rs  main.rs  schema.rs  status.rs  utils.rs
src/db/: mod.rs  user.rs
src/routes/: mod.rs  response.rs
